--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -13,28 +13,11 @@ edition = "2018"
 crate-type = ["cdylib"]
 
 [dependencies]
-wasm-bindgen = "0.2.25"
+cfg-if = "0.1.7"
+wasm-bindgen = "0.2.40"
+rand = {version = "0.6.5",features = ["wasm-bindgen"]  }
+console_error_panic_hook = { version = "0.1.6", optional = true }
 
-# The `console_error_panic_hook` crate provides better debugging of panics by
-# logging them with `console.error`. This is great for development, but requires
-# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
-# code size when deploying.
-console_error_panic_hook = { version = "0.1.5", optional = true }
-
-# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
-# compared to the default allocator's ~10K. It is slower than the default
-# allocator, however.
-wee_alloc = { version = "0.4.2", optional = true }
-
-[dependencies.web-sys]
-version = "0.3"
-features = [
-  "Document",
-  "Element",
-  "HtmlElement",
-  "Node",
-  "Window",
-]
 
 [features]
 default = ["console_error_panic_hook"]
