--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -21,3 +21,6 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 
 [features]
 default = ["console_error_panic_hook"]
+
+[profile.release]
+lto = true
