--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -15,8 +15,15 @@ crate-type = ["cdylib"]
 [dependencies]
 cfg-if = "0.1.7"
 wasm-bindgen = "0.2.40"
+
 rand = {version = "0.6.5",features = ["wasm-bindgen"]  }
 console_error_panic_hook = { version = "0.1.6", optional = true }
+
+[dependencies.web-sys]
+version = "*"
+features = [
+    "console"
+]
 
 
 [features]
