--- a/package.json
+++ b/package.json
@@ -1,21 +1,32 @@
 {
-  "author": "Nick Fitzgerald <nfitzgerald@mozilla.com>",
-  "name": "create-rust-webpack",
-  "version": "0.2.0",
-  "repository": "https://github.com/rustwasm/rust-webpack-template",
-  "license": "(MIT OR Apache-2.0)",
-  "scripts": {
-    "start": "webpack-dev-server -d",
-    "build": "webpack"
-  },
-  "bin": {
-    "create-rust-webpack": ".bin/create-rust-webpack.js"
-  },
-  "devDependencies": {
-    "@wasm-tool/wasm-pack-plugin": "0.2.7",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
-  }
+	"author": "Nick Fitzgerald <nfitzgerald@mozilla.com>",
+	"name": "create-rust-webpack",
+	"version": "0.2.0",
+	"repository": "https://github.com/rustwasm/rust-webpack-template",
+	"license": "(MIT OR Apache-2.0)",
+	"scripts": {
+		"start": "webpack-dev-server -d",
+		"build": "webpack"
+	},
+	"bin": {
+		"create-rust-webpack": ".bin/create-rust-webpack.js"
+	},
+	"devDependencies": {
+		"@types/react": "^16.8.12",
+		"@types/react-dom": "^16.8.3",
+		"@types/react-router-dom": "^4.3.1",
+		"@types/webassembly-js-api": "0.0.3",
+		"@wasm-tool/wasm-pack-plugin": "0.2.7",
+		"html-webpack-plugin": "^3.2.0",
+		"ts-loader": "^5.3.3",
+		"typescript": "^3.4.2",
+		"webpack": "^4.29.6",
+		"webpack-cli": "^3.3.0",
+		"webpack-dev-server": "^3.2.1"
+	},
+	"dependencies": {
+		"react": "^16.8.6",
+		"react-dom": "^16.8.6",
+		"react-router-dom": "^5.0.0"
+	}
 }
