--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@types/webassembly-js-api": "0.0.3",
 		"@wasm-tool/wasm-pack-plugin": "0.2.7",
 		"html-webpack-plugin": "^3.2.0",
+		"pngjs": "^3.4.0",
 		"ts-loader": "^5.3.3",
 		"typescript": "^3.4.2",
 		"webpack": "^4.29.6",
