--- a/crate/Cargo.toml
+++ b/crate/Cargo.toml
@@ -18,6 +18,7 @@ wasm-bindgen = "0.2.43"
 
 ncollide2d = "0.19.1"
 nalgebra = "0.18.0"
+euclid = "0.19.8"
 rand = {version = "0.6.5",features = ["wasm-bindgen"]  }
 console_error_panic_hook = { version = "0.1.6", optional = true }
 
